fix scrollbar issue in roomdevice page

--- a/src/app/dashboard/settings/roomdevices/RoomDeviceManagement.module.css
+++ b/src/app/dashboard/settings/roomdevices/RoomDeviceManagement.module.css
@@ -1,6 +1,5 @@
 .deviceManagementContainer {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   gap: 2rem;
